--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation "androidx.cardview:cardview:1.0.0"
 
+// string to gson vice versa
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
